Date as parameter

--- a/style.css
+++ b/style.css
@@ -29,12 +29,13 @@ body, html {
     /*box-shadow: 0 4px 8px rgba(0,0,0,0.1);*/
     padding: 20px;
     position: absolute;
-}
-
-#countdown-area{
-    visibility: collapse;
+   /*visibility: hidden;*/
 }
 
 .icon {
     cursor: pointer;
+}
+
+#countdown-area{
+    visibility: hidden;
 }
