--- a/style.css
+++ b/style.css
@@ -1,38 +1,27 @@
 body, html {
     height: 100%;
+    width: 100%;
+}
+
+#dateSelection-area{
+    padding: 20px;
+    height: 100vh;
+    width: 30%;
     margin: 0;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background: transparent; 
-}
-
-
-.clock {
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.date {
-    font-size: 18px;
-}
-
-.centerDiv{
-    text-align: center;
-    background: #E9E5E3; /*Brown LM*/
-    border-radius: 20%;
-    width: 250px;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /*box-shadow: 0 4px 8px rgba(0,0,0,0.1);*/
-    padding: 20px;
-    position: absolute;
-   /*visibility: hidden;*/
+    float:left;
+    background: #be4204; 
 }
 
 .selectionDiv {
+    /*text-align: left;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.centerDiv {
     text-align: center;
     background: #E9E5E3; /*Brown LM*/
     width: 250px;
@@ -40,18 +29,25 @@ body, html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /*box-shadow: 0 4px 8px rgba(0,0,0,0.1);*/
     padding: 20px;
     position: absolute;
+}
+
+#preview{
+    padding: 20px;
+    height: 100vh;
+    width: 70%;
+    margin: 0;
+    display: flex;
+    float: right;
+    justify-content: center;
+    align-items: center;
 }
 
 .icon {
     cursor: pointer;
 }
 
-#countdown-area {
-    visibility: hidden;
-}
 
 
 #expired-area {
