--- a/Countdown/style.css
+++ b/Countdown/style.css
@@ -8,8 +8,9 @@ body, html {
 }
 
 .centerDiv{
+    color: #FFFFFF90;
     text-align: center;
-    background: #E9E5E3; /*Brown LM*/
+    background: #2F3437;
     width: 250px;
     height: 250px;
     display: flex;
@@ -17,6 +18,7 @@ body, html {
     justify-content: center;
     padding: 20px;
     position:absolute;
+    border-radius: 0%;
 }
 
 
