--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, html {
     margin: 0;
     display: flex;
     float:left;
-    background: #be4204; 
+    background: #f8c419; 
 }
 
 .selectionDiv {
@@ -18,12 +18,17 @@ body, html {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
 
+.text-label{
+    font-style: normal;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .centerDiv {
+    color: #FFFFFF90;
     text-align: center;
-    background: #E9E5E3; /*Brown LM*/
+    background: #2F3437;
     width: 250px;
     height: 250px;
     display: flex;
@@ -31,6 +36,7 @@ body, html {
     justify-content: center;
     padding: 20px;
     position: absolute;
+    border-radius: 0%;
 }
 
 #preview{
