--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, html {
     width: 100%;
 }
 
-#dateSelection-area{
+#selection-area{
     padding: 20px;
     height: 100vh;
     width: 30%;
@@ -46,17 +46,23 @@ body, html {
     align-items: center;
 }
 
-.btn-help {
-    position: absolute;
-    float: left;
-    bottom: 1%;
-    align-self: baseline;
-    background-color: antiquewhite;
-    padding: 1%;
+#urlArea, #infoArea, #dateSelector, #notionThemeSelector, #labelSelector, #selectIcon {
+    width: -webkit-fill-available;
+    height: 40px;
+    margin-top: 6px;
 }
 
-#infoArea{
-    visibility: hidden;
+.section-area{
+margin-top: 3%;
+margin-bottom: 3%;
+}
+
+.section-area-inside{
+    margin-top: 6%;
+    margin-bottom: 6%;
+    }
+h3{
+    font-weight: bold;
 }
 
 #expired-area {
@@ -66,6 +72,7 @@ body, html {
 .text-label{
     font-style: normal;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
 }
 
 .selected-date{
@@ -94,3 +101,77 @@ body, html {
 .calendar-label {
     font-size: small;
 }
+
+.icons-area{
+    display: math;
+    cursor: pointer;
+}
+
+.icon {
+    color: #2F3437;
+    font-size: x-large;
+}
+
+input[type=checkbox] {
+    height: 18px;
+    width: 18px; 
+}
+
+#iconDecor{
+    font-size: xx-large;
+}
+
+
+
+/* Style The Dropdown Button */
+.dropbtn {
+    background-color: transparent;
+    /*color: white;*/
+    padding: 4px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    font-style: normal;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+  } 
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: flow-root;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content span {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: inline-flex;
+    cursor: pointer;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content span:hover {
+    background-color: #5ddf97
+}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: #f9f9f9;
+  }
